# pensieve-mind

./: .gitignore  README.md  pyproject.toml
src/pensieve_mind/: .env.example  config.py  dependencies.py  main.py
src/pensieve_mind/api/dto/: schemas.py
src/pensieve_mind/api/routes/: embed.py  search.py
src/pensieve_mind/embedding/: embedding_service.py
src/pensieve_mind/scraping/: scraper.py
src/pensieve_mind/search/: mind_service.py
tests/: conftest.py  test_embed_route.py  test_scraper.py  test_search_route.py
