[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pensieve-mind"
version = "0.1.0"
description = "Scraping and semantic embedding service for Pensieve"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pensieve_mind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

